checkout 버튼 클릭부분 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
                         <br>
                         <br>
                         <div class="modal-instance song-btn-wrap">
-                            <a class="btn btn--primary modal-trigger" href="#" onclick="checkPayment(<%= paymentAddress %>);">
+                            <a class="btn btn--primary modal-trigger" href="#" onclick="checkPayment('<%= paymentAddress %>');">
                                 <span class="btn__text">
                                    Checkout
                                 </span>
