--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,6 @@
                         </div> -->
                         <!--end of row-->
                         <br>
-                        <br>
                         <div class="modal-instance song-btn-wrap">
                             <a class="btn btn--primary modal-trigger" href="#" onclick="checkPayment('<%= paymentAddress %>');">
                                 <span class="btn__text">
@@ -105,7 +104,7 @@
                                         <div id="loading21"><div class="gradient"></div></div>
                                         <!-- 결제 정보 -->
                                         <div class="song-modal-coin-info">
-                                            <p>To pay send USDX to the address berow.</p>
+                                            <p>To pay send USDX to the address below.</p>
                                             <!-- amount -->
                                             <div>
                                                 <div class="song-modal-coin-info-icon usd">
